Support ktlint on java 16